<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/set_address_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/recipient_field_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/receiving_address_hint"
            android:textColorHint="@color/colorPrimary"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/address_length"
            app:counterTextAppearance="@style/HintTextAppearance"
            app:hintTextAppearance="@style/HintTextAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/recipient_field"
                style="@style/AddressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone" />

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/camera_btn"
            android:layout_width="@dimen/image_button_width_height"
            android:layout_height="@dimen/image_button_width_height"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_normal"
            android:background="?selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_camera" />

    </LinearLayout>

    <Button
        android:id="@+id/set_address_btn"
        style="@style/RaisedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receiving_address_set"
        android:theme="@style/RaisedButtonTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_address_container" />

    <TextView
        android:id="@+id/scan_title"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".6" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ic_nfc_wristband"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_title" />

</android.support.constraint.ConstraintLayout>